--- a/src/components/pathfinder/node/node.css
+++ b/src/components/pathfinder/node/node.css
@@ -1,10 +1,11 @@
 .node {
-    width: 1.5rem;
-    height: 1.5rem;
+    width: 2rem;
+    height: 2rem;
     outline: 0.5px solid #858c97;
+    background: #f3f1f1;
     display: inline-block;
     margin-top: -6px;
-    background: #f3f1f1;
+    transform: translateY(6px);
   }
   
   .node-finish {
