--- a/src/components/pathfinder/pathfinder.css
+++ b/src/components/pathfinder/pathfinder.css
@@ -1,7 +1,25 @@
-
 .sections {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+}
+
+.sections p {
+  margin-left: 10px;
+  margin-top: 20px;
+  text-align: left;
+  font-size: 25px;
+}
+
+.sections button {
+  background: rgb(12, 53, 71);
+  color: white;
+  width: 175px;
+  border-radius: 0.3rem;
+}
+
+.sections button:hover {
+  background: aliceblue;
+  color: rgb(12, 53, 71);
 }
 
 /* ============= GENERATE SHORTEST PATH SECTION ============= */
@@ -10,32 +28,24 @@
 }
 
 .buttons {
-  
   display: flex;
   justify-content: space-around;
   gap: 2.5rem;
   height: 50px;
 }
 
-.button__dijkstra {
-  background: #C2F8CB;
-  padding: 8px 8px;
-  border: 1px solid black;
-
-}
-
-.button__dijkstra:hover {
-  background-color: aliceblue;
-}
-
 /* ============= GENERATE SHORTEST PATH SECTION ============= */
 .grid {
   background: gray;
-  width: auto;
 }
 
 /* ============= CREATE MAZE SECTION ============= */
-
+.section__maze {
+  background: aliceblue;
+}
 
 
 /* ============= SLIDER SECTION ============= */
+.section__slider {
+  background: lightyellow;
+}
